TestRepo2/src/objects/NABCA_Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NABCA Opportunities</relationshipLabel>
        <relationshipName>NABCA_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>NABCA_Brand__c</referenceTo>
        <relationshipLabel>NABCA Opportunities</relationshipLabel>
        <relationshipName>NABCA_Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Month_End_Date__c</fullName>
        <label>Month End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NABCA_Material_Code__c</fullName>
        <label>NABCA Material Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NABCA_Material_Desc__c</fullName>
        <label>NABCA Material Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Composite_Key__c</fullName>
        <description>External Id (NABCA_STATE_CODE + NABCA_MATERIAL_CODE + NABCA_LICENSEE_CODE)</description>
        <externalId>true</externalId>
        <label>Opportunity Composite Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Percent_Change_Last_Year__c</fullName>
        <label>Percent Change Last Year</label>
        <precision>16</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Roll12_9L_Volume__c</fullName>
        <label>Roll12 9L Volume</label>
        <precision>16</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Distribution_Percent__c</fullName>
        <label>State Distribution Percent</label>
        <precision>16</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>NABCA Opportunity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NO-{MM}{DD}{YYYY}-{0000000}</displayFormat>
        <label>NABCA Objective ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NABCA Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>